New entries should be added at the top
 
2005-02-04 Modified GTK backends to allow the FigureCanvas to be resized
	   smaller than its original size - SC

2005-02-02 Fixed a bug in dates mx2num - JDH

2005-02-02 Incorporated Fernando's matshow - JDH

2005-02-01 Added Fernando's figure num patch, including experemental
           support for pylab backend switching, LineCOllection.color
           warns, savefig now a figure method, fixed a close(fig) bug
           - JDH

2005-01-31 updated datalim in contour - JDH

2005-01-30 Added backend_qtagg.py provided by Sigve Tjora - SC

2005-01-28 Added tk.inspect rc param to .matplotlibrc.  IDLE users
           should set tk.pythoninspect:True and interactive:True and
           backend:TkAgg

2005-01-28 Replaced examples/interactive.py with an updated script from
           Fernando Perez - SC

2005-01-27 Added support for shared x or y axes.  See
           examples/shared_axis_demo.py and examples/ganged_plots.py

2005-01-27 Added Lee's patch for missing symbols \leq and \LEFTbracket
           to _mathtext_data - JDH

2005-01-26 Added Baptiste's two scales patch -- see help(twinx) in the
           pylab interface for more info.  See also
           examples/two_scales.py

2005-01-24 Fixed a mathtext parser bug that prevented font changes in
           sub/superscripts - JDH

2005-01-24 Fixed contour to work w/ interactive changes in colormaps,
           clim, etc - JDH

===============================================================

2005-01-21 matplotlib-0.71 released

2005-01-21 Refactored numerix to solve vexing namespace issues - JDH

2005-01-21 Applied Nadia's contour bug fix - JDH

2005-01-20 Made some changes to the contour routine - particularly
           region=1 seems t fix a lot of the zigzag strangeness.
           Added colormaps as default for contour - JDH

2005-01-19 Restored builtin names which were overridden (min, max,
           abs, round, and sum) in pylab.  This is a potentially